kubernetes/apps/network/network-policies/app/k8s-gateway.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: k8s-gateway
  namespace: network
spec:
  description: "k8s-gateway: Serve DNS for cluster services to internal network"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: k8s-gateway
  enableDefaultDeny:
    egress: false
    ingress: false
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: vmagent
      toPorts:
        - ports:
            - port: "9153"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
