kubernetes/apps/network/network-policies/app/unifi-dns.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: unifi-dns
  namespace: network
spec:
  description: "external-dns: Sync DNS records to UniFi DNS"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: external-dns
      app.kubernetes.io/instance: unifi-dns
  enableDefaultDeny:
    egress: false
    ingress: false
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: vmagent
      toPorts:
        - ports:
            - port: "7979"
              protocol: TCP
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
